доделал openapi контракт и хендлеры на сервере
